@startuml

title __MAINFRAME's Class Diagram__\n

  namespace MainFrame {
    class MainFrame.MainFrame {
        - thread : Thread
        + MainFrame()
        + init()
    }
  }
  

  namespace MainFrame {
    class MainFrame.MainPanel {
        + computer_info : JLabel
        + player_info : JLabel
        + roll_dice : JButton
        + MainPanel()
        + business()
        + moveAgent()
        # paintComponent()
    }
  }
  

  namespace MainFrame {
    class MainFrame.MainPanel.ButtonListener {
        + actionPerformed()
    }
  }
  

  MainFrame.MainFrame -up-|> javax.swing.JFrame
  MainFrame.MainFrame o-- MainFrame.MainPanel : mainPanel
  MainFrame.MainPanel -up-|> javax.swing.JPanel
  MainFrame.MainPanel o-- Board.BlueMarbleBoard : board
  MainFrame.MainPanel +-down- MainFrame.MainPanel.ButtonListener
  MainFrame.MainPanel.ButtonListener .up.|> java.awt.event.ActionListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
